spacing fixes

--- a/packages/web/src/pages/upload-page/fields/RemixModalField.module.css
+++ b/packages/web/src/pages/upload-page/fields/RemixModalField.module.css
@@ -33,7 +33,7 @@
 .fields {
   display: flex;
   flex-direction: column;
-  gap: var(--unit-6)
+  gap: var(--unit-6);
 }
 
 .fields :global(.ant-divider) {
